--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,6 @@
               }
             ],
             "styles": [
-              // "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               {
                 "input": "src/theme/variables.scss"
               },
@@ -99,9 +98,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
-            ],
+            "styles": [],
             "scripts": [],
             "assets": [
               {
